# sim_cf

./: .gitmodules  README.md
crazyflie_gazebo/: .gitignore  CMakeLists.txt  README.md  noise_params_results.txt  package.xml  setup.py
crazyflie_gazebo/include/: _version.h  common.h  gazebo_cfGhost_plugin.h  gazebo_cfHandler_plugin.h  gazebo_controller_interface.h  gazebo_crtp_interface.h  gazebo_gps_plugin.h  gazebo_imu_plugin.h  gazebo_lps_plugin.h  gazebo_magnetometer_plugin.h  gazebo_motor_model.h  gazebo_multirotor_base_plugin.h  gazebo_odometry_plugin.h  gazebo_pressure_plugin.h  gazebo_ros_interface_plugin.h  gazebo_sonar_plugin.h  gazebo_wind_plugin.h
crazyflie_gazebo/include/crazyflie_ros/: CrazyflieROS.h  CrtpUtils.h
crazyflie_gazebo/launch/: 4cf_sim.launch  crazyflie_add.launch  crazyflie_add_multi.launch  crazyflie_add_single.launch  crazyflie_hitl.launch  crazyflie_real_gazebo.launch  crazyflie_server.launch  crazyflie_sim.launch  crazyflie_sitl.launch  crazyflie_visu.rviz  crazyflie_with_joy.launch  joy_launch.launch  mav.launch  max_cf_sitl.launch  multiple_cf.launch  multiple_cf_sim.launch  mylog_plot.xml  spawn_ghost.launch  spawn_mav.launch  spawn_plugin.launch  test_multi_cf.launch
crazyflie_gazebo/models/anchor_stand/: model.config  model.sdf
crazyflie_gazebo/models/anchor_stand/meshes/: anchor_stand.dae  anchor_stand.stl
crazyflie_gazebo/models/cfHandler/: cfHandler.sdf  model.config
crazyflie_gazebo/models/crazyflie/: crazyflie.sdf  model.config
crazyflie_gazebo/models/crazyflie/meshes/: crazyflie.stl  crazyflie_prop.stl
crazyflie_gazebo/models/crazyflie_ghost/: crazyflie_ghost.sdf  model.config
crazyflie_gazebo/models/crazyflie_ghost1/: crazyflie_ghost1.sdf  model.config
crazyflie_gazebo/models/crazyflie_ghost2/: crazyflie_ghost2.sdf  model.config
crazyflie_gazebo/models/iris/: iris.sdf
crazyflie_gazebo/models/matrice_100/: matrice_100-gen.sdf
crazyflie_gazebo/models/mur1/: model.config  model.sdf
crazyflie_gazebo/models/mur2/: model.config  model.sdf
crazyflie_gazebo/models/rotors_description/meshes/: crazyflie.dae  crazyflie_prop.dae
crazyflie_gazebo/models/rotors_description/urdf/: cfHandler_base.xacro  component_snippets.xacro  crazyflie.xacro  crazyflie_base.xacro  crazyflie_ghost_base.xacro  multirotor_base.xacro
crazyflie_gazebo/msgs/: Groundtruth.proto  MotorSpeed.proto  SITLGps.proto  sonarSens.proto
crazyflie_gazebo/scripts/: cfs_instances.sh  crazyflie.py  fancy_traj.py  max_uav_control.py  run_cfs.sh  terminate_cfs.sh  test_high_level.py  test_high_level_4cf.py  test_high_level_multi_cf.py
crazyflie_gazebo/src/: gazebo_cfGhost_plugin.cpp  gazebo_cfHandler_plugin.cpp  gazebo_controller_interface.cpp  gazebo_crtp_interface.cpp  gazebo_gps_plugin.cpp  gazebo_imu_plugin.cpp  gazebo_lps_plugin.cpp  gazebo_magnetometer_plugin.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_pressure_plugin.cpp  gazebo_ros_interface_plugin.cpp  gazebo_sonar_plugin.cpp  gazebo_wind_plugin.cpp
crazyflie_gazebo/src/crazyflie_ros/: CrazyflieCollectSensors.cpp  CrazyflieROS.cpp  crazyflie_add.cpp  crazyflie_server.cpp  joy_control.cpp  test_cf.cpp
crazyflie_gazebo/srv/: AddCrazyflie.srv  sendPacket.srv
crazyflie_gazebo/tools/crazyflie_gazebo/: __init__.py  crazyflie.py
crazyflie_gazebo/tools/crazyflie_gazebo/tools/: crazyflie.py
crazyflie_gazebo/worlds/: basic.world  crazyflie.world  empty.world  powerplant.world  real_salle_lix.world  salle_lix.world  test_city.world  warehouse.world
